--- a/src/components/App.css
+++ b/src/components/App.css
@@ -17,13 +17,15 @@
 margin-bottom: 20px;
 }
 .button {
-  background-color:  #142d4c;
+  background-color:  #006B8F;
   color: #fff;
   border-radius: 4px;
   height: 40px
   
 }
-
+.blue-text {
+  text-align: center;
+}
 @media only screen and (max-width: 600px) {
 .form-group {
   width: 350px;
